# pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "Pyriod"
version = "0.3.5"
description = "Interactive prewhitening and sinusoidal fitting for astronomical time series"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "Keaton Bell", email="keaton.bell@qc.cuny.edu"}
]
keywords = [
  "asteroseismology",
  "prewhitening",
  "periodogram",
  "light curves",
  "pulsating stars",
  "Fourier analysis",
  "time domain astronomy"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.9",
  "astropy>=5",
  "lightkurve>=2.1.1",
  "lmfit>=1.1",
  "beautifulsoup4>=4.11",
  "matplotlib>=3.6",
  "ipympl>=0.7",
  "ipywidgets>=8",
  "qgridnext>1.3.1",
  "ipyfilechooser>=0.3.5",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-cov",
]

dev = [
  "Pyriod[notebook,test]",
  "build",
  "twine",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/keatonb/Pyriod"
Documentation = "https://pyriod.readthedocs.io/"
Issues = "https://github.com/keatonb/Pyriod/issues"

[tool.setuptools.packages.find]
include = ["Pyriod*"]
